# fprime-python

./: .gitmodules  README.md  fprime-python.cmake
PyApp/: CMakeLists.txt  settings.ini
PyApp/SignalGen/: CMakeLists.txt  Commands.xml  Events.xml  SignalGen.cpp  SignalGen.hpp  SignalGen.py  SignalGenComponentAi.xml  SignalInfoSerializableAi.xml  SignalPairSerializableAi.xml  SignalPairSetArrayAi.xml  SignalSetArrayAi.xml  SignalTypeEnumAi.xml  Telemetry.xml
PyApp/Top/: CMakeLists.txt  Components.hpp  Main.cpp  PyAppTopologyAppAi.xml  Topology.cpp
autocode/: pybind_gen.py
autocode/templates/: ComponentTemplate.py.j2  PyBindAc.cpp.j2  PyBindAc.hpp.j2  fprime_pybind.py.j2
fprime-python/FprimePy/: CMakeLists.txt  FprimePy.cpp  FprimePy.hpp
fprime-python/PyInit/: CMakeLists.txt  PyInit.hpp
